--- a/ios/ios/templates/privacy.html
+++ b/ios/ios/templates/privacy.html
@@ -1,6 +1,48 @@
 <html>
 <title>Privacy Policy</title>
 <body>
-<h1>WE GON STEAL YO DATA</h1>
+<h1>Family Feud Privacy Policy:</h1>
+<br />
+<br />
+Please read the following very carefully.  By registering an account, you are accepting the collection and use of the information specified below.
+<br />
+<br />
+Information:
+Information is stored on the server both on registration of an account and during play time.  The information collected during these two phases is described below.
+<br />
+<br />
+On Registration - When an account is created, the username, password, and email of the user is stored on the server.  
+<br />
+<br />
+While Playing - Information related to the user's play (high scores, best games, etc.) is sent and stored on the server.  The user is able to see all of this information in the High Scores Screen.
+<br />
+<br />
+
+Information Use:
+Username and passwords of users are only stored on the server and used for authentication purposes.  Email is stored and used as a means of emailing users if they need to reset their password.  Information about the user's total score over time is used in order to populate the high score leader board in the high score screen along with all other users of the system.  Other statistical information is used only to show these items to the user in the High Scores Screen.  Besides the developers and the user, no other third party has access to this information.
+<br />
+<br />
+Choice:
+If the user wishes to participate in the app, the user must agree to having this information stored on the server.  If a user wants this information erased, they can delete their account by inputting their credentials (username and password) into the website below.
+<br /><br />
+
+<a href="http://ec2-54-174-16-239.compute-1.amazonaws.com/delete">Website</a>
+ <br />
+<br />
+
+Access: 
+All of the information stored about the user account specifically (username, password, and email) is something that the user should already have access to in order to use the application.  Information collected about the usage habit of the user is accessible in the High Scores Screen of the application.  
+<br />
+<br />
+Security:
+Personal user information (user passwords) are stored securely on the server using a SHA hash function.  
+<br /><br />
+
+Redress:
+If this privacy policy is not met to the understanding of the user, the user is able to email nal3gc@virginia.edu with their concern and the issue will be dealt with by a personal representative of the team as quickly as possible.  
+<br /><br />
+
+Updates:
+Due to the fact that this application was developed as a school assignment, the application will not be updated further.  
 </body>
 </html>
